# stock_skills

./: CLAUDE.md  README.md  README_zh-CN.md  README_zh-TW.md  main.py  pyproject.toml
.claude/: settings.json
.claude/rules/: development.md  graph-context.md  intent-routing.md  plan-check.md  portfolio.md  screening.md  testing.md  workflow.md
.claude/skills/graph-query/: SKILL.md
config/: exchanges.yaml  markets.yaml  module_annotations.yaml  screening_presets.yaml  themes.yaml  thresholds.yaml  user_profile.yaml.example
docs/: api-reference.md  api-routing-diagram.html  architecture.md  data-models.md  growth-stock-approach.html  neo4j-schema.md  patterns.md  skill-catalog.md  theme-screening-approach.html
scripts/: backfill_embeddings.py  backfill_lesson_communities.py  cli_framework.py  common.py  extract_constraints.py  generate_docs.py  get_context.py  init_graph.py  market_dashboard.py
scripts/hooks/: pre-commit
src/core/: action_item_detector.py  market_dashboard.py  models.py  proactive_engine.py  return_estimate.py  ticker_utils.py  value_trap.py
src/core/health/: alert.py  (+6 more)
src/data/: history_store.py  lesson_community.py  user_profile.py
src/markets/: asean.py  japan.py  us.py
src/output/: _format_helpers.py  _portfolio_utils.py  adjust_formatter.py  analyze_formatter.py  formatter.py  health_formatter.py  portfolio_formatter.py  rebalance_formatter.py  research_formatter.py  review_formatter.py  screening_summary_formatter.py  simulate_formatter.py  stress_formatter.py
tests/data/: test_auto_context.py  test_backfill_embeddings.py
(+65 files in other folders)
