[project]
name = "stock-skills"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "yfinance>=1.1.0",
    "pyyaml>=6.0",
    "numpy>=1.24.0",
    "python-dotenv>=1.0.0",
    "networkx>=3.0",
    "neo4j>=6.1.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
]
